# mem-manager

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  REUSE.toml  WORKSPACE  WORKSPACE.bzlmod
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: issue_report.md
.github/workflows/: ci.yml
bazel/rules_hdl_compat/: MODULE.bazel  WORKSPACE
bazel/rules_hdl_compat/verilog/: providers.bzl
container/: Containerfile
src/: BUILD.bazel  mem.cc  mem.h  mem_manager.cc  mem_manager.h  mem_manager.svh  sparse_mem.cc  sparse_mem.h  util.cc  util.h
test/: BUILD.bazel  arith.hex  arith.riscv  mem_manager_test.sv  sparse_mem_test.cc
