load("@rules_hdl//verilog:providers.bzl", "verilog_library")

cc_library(
    name = "mem_manager",
    deps = ["//src:mem_manager"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mem_manager_dpi",
    deps = ["//src:mem_manager_dpi"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "mem_manager_svh",
    deps = ["//src:mem_manager_svh"],
    visibility = ["//visibility:public"],
)
