load("@rules_hdl//verilog:providers.bzl", "verilog_library")

cc_library(
    name = "mem_manager",
    hdrs = ["mem_manager.h"],
    srcs = glob(include = ["*.cc", "*.h"], exclude = ["mem_manager.h"]),
    includes = ["."],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "mem_manager_svh",
    srcs = ["mem_manager.svh"],
    visibility = ["//visibility:public"],
)
