load("@rules_hdl//verilog:providers.bzl", "verilog_library")

cc_library(
    name = "mem_manager",
    hdrs = ["mem_manager.h"],
    srcs = glob(include = ["*.cc", "*.h"], exclude = ["mem_manager.h"]),
    includes = ["."],
    alwayslink = True,
    linkstatic = True,
    visibility = ["//:__pkg__"],
    linkopts = ["-llz4"],
)

cc_library(
    name = "mem_manager_dpi",
    deps = ["mem_manager"],
    visibility = ["//:__pkg__"],
)

verilog_library(
    name = "mem_manager_svh",
    hdrs = ["mem_manager.svh"],
    visibility = ["//:__pkg__"],
)
