load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("@rules_hdl//verilog:build_defs.bzl", "verilog_flist")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

verilog_library(
    name = "mem_manager_test_sv_lib",
    srcs = ["mem_manager_test.sv"],
    deps = ["//src:mem_manager_svh"],
)

verilog_flist(
    name = "mem_manager_test.f",
    srcs = ["mem_manager_test_sv_lib"],
)

verilator_cc_library(
    name  = "mem_manager_test_sv",
    mtop  = "mem_manager_test",
    flist = "mem_manager_test.f",
    vopts = ['--assert'],
)

cc_test(
    name = "sparse_mem_test",
    size = "small",
    srcs = ["sparse_mem_test.cc"],
    data = [
        "arith.riscv",
    ],
    deps = [
        "//:mem_manager",
        ":mem_manager_test_sv",
        "@com_google_googletest//:gtest_main",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    linkopts = ["-lz"],
)
