load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

verilog_library(
    name = "mem_manager_test_sv_lib",
    srcs = ["mem_manager_test.sv"],
    deps = ["//:mem_manager_svh"],
    top_module = "mem_manager_test",
)

verilator_cc_library(
    name   = "mem_manager_test_sv",
    module = ":mem_manager_test_sv_lib",
    vopts  = ["--assert"],
)

genrule(
   name  = "arith_bin_lz4",
   srcs  = ["arith.bin.lz4.gz"],
   outs  = ["arith.bin.lz4"],
   cmd   = "gunzip < $< > $@",
)

cc_binary(
    name = "sparse_mem_test",
    srcs = ["sparse_mem_test.cc"],
    data = [
        "arith.riscv",
        "arith.hex",
        "arith.bin.lz4",
        "arith.bin",
    ],
    deps = [
        "//:mem_manager",
        ":mem_manager_test_sv",
        "@com_google_googletest//:gtest_main",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    linkopts = ["-lz"],
)

sh_test(
    name = "sparse_mem_test_test",
    srcs = [":sparse_mem_test"],
    size = "small",
)
